--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -1,1 +1,167 @@
+Alright! Let's begin by designing **Lab 1: Creating Your First Interactive Report in Tableau** using the provided Superstore data.
 
+---
+
+## 📘 **Lab 1: Creating Your First Interactive Report - Sales Overview**
+
+### Objective:
+In this lab, you will:
+- Connect Tableau to the Superstore dataset
+- Create an interactive report showing Sales, Profit, and Quantity by Category and Region
+- Add basic interactivity (filter, tooltip, and formatting)
+
+---
+
+### ✅ **Step 1: Open Tableau and Connect to Data**
+
+1. Open **Tableau Desktop**.
+2. From the home screen, click **"Microsoft Excel"** if you saved the dataset as an Excel file or **"Text File"** if it's a CSV.
+3. Locate your dataset file (Superstore_Lab1.csv or Excel).
+4. Click **Open**.
+
+---
+
+### ✅ **Step 2: Load the Data into Tableau**
+
+1. Tableau will automatically load the data into the **Data Source** tab.
+2. Verify that all columns are loaded correctly (e.g., Sales, Profit, Region, etc.).
+3. Click **Sheet 1** at the bottom to start creating your report.
+
+---
+
+### ✅ **Step 3: Create a Sales by Region and Category Report**
+
+1. Drag **Region** to the Columns shelf.
+2. Drag **Category** to the Rows shelf.
+3. Drag **Sales** to the **Text** shelf (in Marks card).
+4. Change the **Marks Type** from Automatic to **Bar**.
+5. Drag **Profit** to **Color** on the Marks card.
+   - This will give you a profit heat map on top of the Sales bars.
+
+---
+
+### ✅ **Step 4: Add Quantity to Tooltip**
+
+1. Drag **Order Quantity** to the **Tooltip** section in the Marks card.
+2. Hover over any bar to view interactive tooltips showing **Region**, **Category**, **Sales**, **Profit**, and **Order Quantity**.
+
+---
+
+### ✅ **Step 5: Add Filters**
+
+1. Drag **Customer Segment** to the **Filters** shelf.
+2. Select all segments for now.
+3. Right-click the filter on the right panel and click **Show Filter**.
+   - This will allow users to dynamically filter the report by Customer Segment.
+
+---
+
+### ✅ **Step 6: Formatting**
+
+1. Go to **Format** > **Shading**.
+   - Change the background to white.
+2. Adjust the color scheme for Profit (Optional).
+   - Click on the color legend and select a diverging color palette.
+3. Adjust label fonts to make the report look cleaner.
+
+---
+
+### ✅ **Step 7: Save Your Workbook**
+
+1. Click **File** > **Save As**.
+2. Name it: `Lab1_Sales_Overview.twbx`.
+3. Save it in your project folder.
+
+---
+
+### ✅ **Step 8: Deliverable**
+
+Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
+
+---
+
+Do you want me also to show you:
+1. ✅ How to make it more interactive (with dynamic parameters, drill-downs, dashboards)?  
+2. ✅ How to prepare this into a nice formatted lab PDF (with screenshots)?  
+
+If yes, just say *continue Lab 1*, and I will build the full lab step-by-step for you like a professional course document.  
+
+--- 
+
+Great! Let's continue **Lab 1** by adding more interactive reports using the Superstore dataset. So far, we've built:
+
+1. **Sales by Category**
+2. **Profit by Region**
+3. **Quantity by Customer Segment (with filters)**
+
+Now let's add more visualizations to make Lab 1 more comprehensive and interactive.
+
+---
+
+### ✅ **Report 4: Sales vs. Profit Scatter Plot (Colored by Category)**
+
+**Objective**: Understand how profit and sales are correlated across different product categories.
+
+**Steps**:
+1. Go to a new worksheet and name it **Sales vs. Profit**.
+2. Drag `Sales` to **Columns**.
+3. Drag `Profit` to **Rows**.
+4. Drag `Category` to **Color** (under the Marks card).
+5. Drag `Item` to **Detail** (to make each dot represent a product).
+6. Optional: Add `Item` to Tooltip to view item names on hover.
+7. Format axis titles and adjust the tooltip formatting.
+
+---
+
+### ✅ **Report 5: Sales by State (Map View)**
+
+**Objective**: Visualize geographical sales performance.
+
+**Steps**:
+1. Create a new worksheet and name it **Sales by State Map**.
+2. Drag `State` to **Rows** (Tableau will recognize it as a geographic field).
+3. Drag `Sales` to **Color** and **Label** on the Marks card.
+4. Change the Marks type to **Map**.
+5. Use the **Color Legend** to highlight states with high and low sales.
+6. Add `Category` as a filter if you want users to view map sales per category.
+
+---
+
+### ✅ **Report 6: Top 10 Customers by Profit**
+
+**Objective**: Identify customers contributing the most profit.
+
+**Steps**:
+1. Create a new worksheet called **Top 10 Customers**.
+2. Drag `Customer Name` to **Rows**.
+3. Drag `Profit` to **Columns`.
+4. Sort by descending order of Profit.
+5. Drag `Profit` to **Label** to show values.
+6. Use the **Top N Filter**:
+   - Right-click `Customer Name` > Filter.
+   - Go to **Top** tab > Select **By field**: Top 10 by Sum of Profit.
+7. Optional: Add `Customer Segment` to color or filter.
+
+---
+
+### ✅ **Dashboard Creation: Lab 1 Dashboard**
+
+Let’s combine all visualizations into a dashboard.
+
+**Steps**:
+1. Click the **Dashboard** tab and choose **New Dashboard**.
+2. Drag the following worksheets onto the dashboard:
+   - Sales by Category
+   - Profit by Region
+   - Quantity by Segment
+   - Sales vs. Profit
+   - Sales by State Map
+   - Top 10 Customers
+3. Use **Tiled layout** for neat alignment.
+4. Add **Filters** or **Highlight Actions**:
+   - Example: Click a Category in “Sales by Category” to highlight items in other views.
+5. Add Titles and Captions for clarity.
+
+---
+
+Would you like to move on to **Lab 2** next? We can explore time series trends, calculated fields, or shipping analysis!
