--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -34,9 +34,11 @@ In this lab, you will:
 1. Drag **Region** to the Columns shelf.
 2. Drag **Category** to the Rows shelf.
 3. Drag **Sales** to the **Text** shelf (in Marks card).
-4. Change the **Marks Type** from Automatic to **Bar**.
-5. Drag **Profit** to **Color** on the Marks card.
+4. Drag **Profit** to **Color** on the Marks card.
+5. Change the **Marks Type** from Automatic to **Square**
    - This will give you a profit heat map on top of the Sales bars.
+
+Double tap in sheet 1 and rename it as **Sales by Region and Category**
 
 ---
 
@@ -78,13 +80,6 @@ In this lab, you will:
 
 Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
 
----
-
-Do you want me also to show you:
-1. ✅ How to make it more interactive (with dynamic parameters, drill-downs, dashboards)?  
-2. ✅ How to prepare this into a nice formatted lab PDF (with screenshots)?  
-
-If yes, just say *continue Lab 1*, and I will build the full lab step-by-step for you like a professional course document.  
 
 --- 
 
