--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -17,6 +17,7 @@ In this lab, you will:
 1. Open **Tableau Desktop**.
 2. From the home screen, click **"Microsoft Excel"** if you saved the dataset as an Excel file or **"Text File"** if it's a CSV.
 3. Locate your dataset file (Superstore_Lab1.csv or Excel).
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/1.png?raw=true)
 4. Click **Open**.
 
 ---
@@ -27,69 +28,28 @@ In this lab, you will:
 2. Verify that all columns are loaded correctly (e.g., Sales, Profit, Region, etc.).
 3. Click **Sheet 1** at the bottom to start creating your report.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/2.png?raw=true)
+
 ---
 
 ### ✅ **Step 3: Create a Sales by Region and Category Report**
 
 1. Drag **Region** to the Columns shelf.
 2. Drag **Category** to the Rows shelf.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/3.png?raw=true)
 3. Drag **Sales** to the **Text** shelf (in Marks card).
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/4.png?raw=true)
 4. Drag **Profit** to **Color** on the Marks card.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/5.png?raw=true)
 5. Change the **Marks Type** from Automatic to **Square**
    - This will give you a profit heat map on top of the Sales bars.
+   
+   ![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/6.png?raw=true)
 
 Double tap in sheet 1 and rename it as **Sales by Region and Category**
 
----
-
-### ✅ **Step 4: Add Quantity to Tooltip**
-
-1. Drag **Order Quantity** to the **Tooltip** section in the Marks card.
-2. Hover over any bar to view interactive tooltips showing **Region**, **Category**, **Sales**, **Profit**, and **Order Quantity**.
-
----
-
-### ✅ **Step 5: Add Filters**
-
-1. Drag **Customer Segment** to the **Filters** shelf.
-2. Select all segments for now.
-3. Right-click the filter on the right panel and click **Show Filter**.
-   - This will allow users to dynamically filter the report by Customer Segment.
-
----
-
-### ✅ **Step 6: Formatting**
-
-1. Go to **Format** > **Shading**.
-   - Change the background to white.
-2. Adjust the color scheme for Profit (Optional).
-   - Click on the color legend and select a diverging color palette.
-3. Adjust label fonts to make the report look cleaner.
-
----
-
-### ✅ **Step 7: Save Your Workbook**
-
-1. Click **File** > **Save As**.
-2. Name it: `Lab1_Sales_Overview.twbx`.
-3. Save it in your project folder.
-
----
-
-### ✅ **Step 8: Deliverable**
-
-Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
-
-
---- 
-
-Great! Let's continue **Lab 1** by adding more interactive reports using the Superstore dataset. So far, we've built:
-
-1. **Sales by Category**
-2. **Profit by Region**
-3. **Quantity by Customer Segment (with filters)**
-
-Now let's add more visualizations to make Lab 1 more comprehensive and interactive.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/7.png?raw=true)
 
 ---
 
@@ -106,19 +66,6 @@ Now let's add more visualizations to make Lab 1 more comprehensive and interacti
 6. Optional: Add `Item` to Tooltip to view item names on hover.
 7. Format axis titles and adjust the tooltip formatting.
 
----
-
-### ✅ **Report 5: Sales by State (Map View)**
-
-**Objective**: Visualize geographical sales performance.
-
-**Steps**:
-1. Create a new worksheet and name it **Sales by State Map**.
-2. Drag `State` to **Rows** (Tableau will recognize it as a geographic field).
-3. Drag `Sales` to **Color** and **Label** on the Marks card.
-4. Change the Marks type to **Map**.
-5. Use the **Color Legend** to highlight states with high and low sales.
-6. Add `Category` as a filter if you want users to view map sales per category.
 
 ---
 
@@ -128,8 +75,8 @@ Now let's add more visualizations to make Lab 1 more comprehensive and interacti
 
 **Steps**:
 1. Create a new worksheet called **Top 10 Customers**.
-2. Drag `Customer Name` to **Rows**.
-3. Drag `Profit` to **Columns`.
+2. Drag `Category` to **Rows**.
+3. Drag `Sales` to **Columns`.
 4. Sort by descending order of Profit.
 5. Drag `Profit` to **Label** to show values.
 6. Use the **Top N Filter**:
@@ -157,6 +104,17 @@ Let’s combine all visualizations into a dashboard.
    - Example: Click a Category in “Sales by Category” to highlight items in other views.
 5. Add Titles and Captions for clarity.
 
+### ✅ **Step 7: Save Your Workbook**
+
+1. Click **File** > **Save As**.
+2. Name it: `Lab1_Sales_Overview.twbx`.
+3. Save it in your project folder.
+
+---
+
+### ✅ **Step 8: Deliverable**
+
+Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
 ---
 
 Would you like to move on to **Lab 2** next? We can explore time series trends, calculated fields, or shipping analysis!
