--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -63,51 +63,28 @@ Double tap in sheet 1 and rename it as **Sales by Region and Category**
 3. Drag `Profit` to **Rows**.
 4. Drag `Category` to **Color** (under the Marks card).
 5. Drag `Item` to **Detail** (to make each dot represent a product).
-6. Optional: Add `Item` to Tooltip to view item names on hover.
 7. Format axis titles and adjust the tooltip formatting.
 
 
 ---
 
-### ✅ **Report 6: Top 10 Customers by Profit**
+### ✅ **Report 3: Customer Segment by Profit**
 
-**Objective**: Identify customers contributing the most profit.
+**Objective**: Identify customer segment contributing the most profit.
 
 **Steps**:
-1. Create a new worksheet called **Top 10 Customers**.
-2. Drag `Category` to **Rows**.
-3. Drag `Sales` to **Columns`.
+1. Create a new worksheet called **Customer Segment by Profit**.
+2. Drag `Category Segment` to **Rows**.
+3. Drag `Profit` to **Columns`.
 4. Sort by descending order of Profit.
-5. Drag `Profit` to **Label** to show values.
-6. Use the **Top N Filter**:
-   - Right-click `Customer Name` > Filter.
-   - Go to **Top** tab > Select **By field**: Top 10 by Sum of Profit.
-7. Optional: Add `Customer Segment` to color or filter.
+5. Drag `Profit` to **Color** to show values.
+6. Click on color under Marks card. Then edit color, choose a color combination of your choice and click apply
 
----
-
-### ✅ **Dashboard Creation: Lab 1 Dashboard**
-
-Let’s combine all visualizations into a dashboard.
-
-**Steps**:
-1. Click the **Dashboard** tab and choose **New Dashboard**.
-2. Drag the following worksheets onto the dashboard:
-   - Sales by Category
-   - Profit by Region
-   - Quantity by Segment
-   - Sales vs. Profit
-   - Sales by State Map
-   - Top 10 Customers
-3. Use **Tiled layout** for neat alignment.
-4. Add **Filters** or **Highlight Actions**:
-   - Example: Click a Category in “Sales by Category” to highlight items in other views.
-5. Add Titles and Captions for clarity.
 
 ### ✅ **Step 7: Save Your Workbook**
 
 1. Click **File** > **Save As**.
-2. Name it: `Lab1_Sales_Overview.twbx`.
+2. Name it: `Lab1.twbx`.
 3. Save it in your project folder.
 
 ---
@@ -117,4 +94,4 @@ Let’s combine all visualizations into a dashboard.
 Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
 ---
 
-Would you like to move on to **Lab 2** next? We can explore time series trends, calculated fields, or shipping analysis!
+Next , we shall continue with our lab2 using the same dataset.
