--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -32,7 +32,7 @@ In this lab, you will:
 
 ---
 
-### ✅ **Step 3: Create a Sales by Region and Category Report**
+### ✅ **Report 1: Create a Sales by Region and Category Report**
 
 1. Drag **Region** to the Columns shelf.
 2. Drag **Category** to the Rows shelf.
@@ -53,7 +53,7 @@ Double tap in sheet 1 and rename it as **Sales by Region and Category**
 
 ---
 
-### ✅ **Report 4: Sales vs. Profit Scatter Plot (Colored by Category)**
+### ✅ **Report 2: Sales vs. Profit Scatter Plot (Colored by Category)**
 
 **Objective**: Understand how profit and sales are correlated across different product categories.
 
@@ -61,24 +61,33 @@ Double tap in sheet 1 and rename it as **Sales by Region and Category**
 1. Go to a new worksheet and name it **Sales vs. Profit**.
 2. Drag `Sales` to **Columns**.
 3. Drag `Profit` to **Rows**.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/17.png?raw=true)
 4. Drag `Category` to **Color** (under the Marks card).
 5. Drag `Item` to **Detail** (to make each dot represent a product).
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/18.png?raw=true)
 7. Format axis titles and adjust the tooltip formatting.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/19.png?raw=true)
 
 ---
 
-### ✅ **Report 3: Customer Segment by Profit**
+### ✅ **Report 3: Customer Segment by Order Quantity**
 
-**Objective**: Identify customer segment contributing the most profit.
+**Objective**: Identify customer segment have the high orders.
 
 **Steps**:
 1. Create a new worksheet called **Customer Segment by Profit**.
 2. Drag `Category Segment` to **Rows**.
-3. Drag `Profit` to **Columns`.
-4. Sort by descending order of Profit.
-5. Drag `Profit` to **Color** to show values.
-6. Click on color under Marks card. Then edit color, choose a color combination of your choice and click apply
+3. Drag `Order Quantity` to **Columns`.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/20.png?raw=true)
+
+4. Click on color under Marks card. Then edit color, choose a color combination of your choice and click apply
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/22.png?raw=true)
+
+5. Drag `Order Quantity` to **Color** to show values.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/21.png?raw=true)
+6. Sort by descending order of Profit.
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/23.png?raw=true)
 
 
 ### ✅ **Step 7: Save Your Workbook**
