--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -37,7 +37,11 @@ Perfect! Let's build out a **step-by-step Tableau report guide** based on your h
    - Right-click on the axis > **Add Reference Line**.
    - Choose **Per Cell** and select `Department Goal`.
 7. Format the line (e.g. dashed red) to highlight the target line.
+Use Pane when your view has Department in Rows, and you want a separate reference line for each department.
 
+Then under Value, select Department Goal.
+
+Format the line (color: red, style: dashed, etc.).
 ---
 
 ## ✅ **Report 3: Revenue by Doctor (Horizontal Bar)**
