--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -7,7 +7,7 @@ Alright! Let's begin by designing **Lab 1: Creating Your First Interactive Repor
 ### Objective:
 In this lab, you will:
 - Connect Tableau to the Superstore dataset
-- Create an interactive report showing Sales, Profit, and Quantity by Category and Region
+- Create an interactive report showing Sales by Category and Region
 - Add basic interactivity (filter, tooltip, and formatting)
 
 ---
@@ -32,53 +32,34 @@ In this lab, you will:
 
 ---
 
-### ✅ **Report 1: Create a Sales by Region and Category Report**
+### ✅ **Report 1: Create a Sales by Department Report**
 
-1. Drag **Region** to the Columns shelf.
-2. Drag **Category** to the Rows shelf.
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/3.png?raw=true)
-3. Drag **Sales** to the **Text** shelf (in Marks card).
+1. Drag **Sales** to the Columns shelf.
+2. Drag **Department** to the Rows shelf.
 
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/4.png?raw=true)
-4. Drag **Profit** to **Color** on the Marks card.
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/5.png?raw=true)
-5. Change the **Marks Type** from Automatic to **Square**
-   - This will give you a profit heat map on top of the Sales bars.
-   
-   ![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/6.png?raw=true)
+Double tap in sheet 1 and rename it as **Sales by Department**
 
-Double tap in sheet 1 and rename it as **Sales by Region and Category**
-
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/7.png?raw=true)
 
 ---
 
-### ✅ **Report 2: Sales vs. Profit Scatter Plot (Colored by Category)**
+### ✅ **Report 2: Sales by Region and Department**
 
-**Objective**: Understand how profit and sales are correlated across different product categories.
 
 **Steps**:
 1. Go to a new worksheet and name it **Sales vs. Profit**.
 2. Drag `Sales` to **Columns**.
-3. Drag `Profit` to **Rows**.
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/17.png?raw=true)
-4. Drag `Category` to **Color** (under the Marks card).
-5. Drag `Item` to **Detail** (to make each dot represent a product).
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/18.png?raw=true)
-7. Format axis titles and adjust the tooltip formatting.
-
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/19.png?raw=true)
+3. Drag `Region` and `Department` to **Rows**.
 
 ---
 
-### ✅ **Report 3: Customer Segment by Order Quantity**
+### ✅ **Report 3: Sales by Department ( Bar Chart - Stacked)**
 
-**Objective**: Identify customer segment have the high orders.
 
 **Steps**:
-1. Create a new worksheet called **Customer Segment by Profit**.
+1. Create a new worksheet called **Sales by Department ( Bar Chart - Stacked)**.
 2. Drag `Category Segment` to **Rows**.
 3. Drag `Order Quantity` to **Columns`.
+4. Drag `Order Quantity` to **Columns`.
 ![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/20.png?raw=true)
 
 4. Click on color under Marks card. Then edit color, choose a color combination of your choice and click apply
