--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -52,23 +52,92 @@ Double tap in sheet 1 and rename it as **Sales by Department**
 
 ---
 
-### ✅ **Report 3: Sales by Department ( Bar Chart - Stacked)**
+### ✅ **Report 3: Sales of Department by Region ( Bar Chart - Stacked)**
 
 
 **Steps**:
 1. Create a new worksheet called **Sales by Department ( Bar Chart - Stacked)**.
-2. Drag `Category Segment` to **Rows**.
-3. Drag `Order Quantity` to **Columns`.
-4. Drag `Order Quantity` to **Columns`.
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/20.png?raw=true)
+2. Drag `Department` to **Rows**.
+3. Drag `Sales` to **Columns`.
+4. Drag `Region` to color in the Marks card.
 
-4. Click on color under Marks card. Then edit color, choose a color combination of your choice and click apply
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/22.png?raw=true)
 
-5. Drag `Order Quantity` to **Color** to show values.
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/21.png?raw=true)
-6. Sort by descending order of Profit.
-![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/23.png?raw=true)
+Double tap on sheet 3 and rename it as **Sales of Department by Region ( Bar Chart - Stacked)**
+
+### ✅ **Report 4: Sales over Time( Quarter )**
+
+
+**Steps**:
+1. Create a new worksheet called **Sales over Time( Quarter )**.
+2. Drag `Sales` to **Rows**.
+3. Drag `Order Date` to **Columns`.
+4. Click on the arrow of the column(Order date) and choose quarter from the dropdown.
+
+
+Rename the sheet as Sales over Time( Quarter )
+
+### ✅ **Report 5: Sales over Time by Region**
+
+
+**Steps**:
+1. Create a new worksheet called **Sales over Time by Region**.
+2. Drag `Sales` to **Rows**.
+3. Drag `Order Date` to **Columns`.
+4. Click on the arrow of the column(Order date) and choose quarter from the dropdown.
+5. Drag Region on the color option on the Marks Card
+
+
+
+### ✅ **Report 6: Sales over Time by Category **
+
+
+**Steps**:
+1. Create a new worksheet called **Sales over Time by Category
+2. Drag `Sales` and `Category` to **Rows**.
+3. Drag `Order Date` to **Columns`.
+4. Click on the arrow of the column(Order date) and choose quarter from the dropdown.
+
+### ✅ **Report 7: Sales by State **
+
+
+**Steps**:
+1. Create a new worksheet called **Sales by State**
+2. Drag `Latitude` to **Rows**.
+3. Drag `Longitude` to **Columns`.
+4. Drag and drop sales in color option on the Marks card
+5. Drag and drop state in the detail option on the Marks card
+
+### ✅ **Report 8: Sales by Postal Code **
+
+
+**Steps**:
+1. Create a new worksheet called **Sales by Postal Code**
+2. Drag `Latitude` to **Rows**.
+3. Drag `Longitude` to **Columns`.
+4. Drag and drop sales in Size option on the Marks card
+5. Drag and drop postal Code in the detail option on the Marks card
+6. Drag and drop Profit in the Color option on the Marks Card
+
+### ✅ **Report 9: Density of Orders**
+
+
+**Steps**:
+1. Create a new worksheet called **Density of Orders**
+2. Drag `Latitude` to **Rows**.
+3. Drag `Longitude` to **Columns`.
+4. Drag and drop Postal Code in the detail option on the Marks card
+
+### ✅ **Dashboard: Superstore Sales**
+
+
+**Steps**:
+1. Click on the dashboard option located on the Title bar.
+2. Select new dashboard ( you will land on a empty dashboard)
+3. From the existing sheets list on the left pane, Drag and drop the following sheets
+- Sales by Department
+- Sales over Time(Quarter)
+- Sales by Postal Code
+
 
 
 ### ✅ **Step 7: Save Your Workbook**
