--- a/Lab2/2.md
+++ b/Lab2/2.md
@@ -1,49 +1,127 @@
-Let us continue with Lab2 using the same dataset (Superstore).
+Alright! Let's begin by designing **Lab 1: ** using the provided Superstore data.
 
-You can continue in the same worksheet as used for Lab1.
+---
+
+## 📘 **Lab 2: **
+
+### Objective:
+In this lab, you will:
+- Connect Tableau to the Superstore dataset
+- Create an interactive report showing Sales by Category and Region
+- Add basic interactivity (filter, tooltip, and formatting)
+
+---
+
+### ✅ **Step 1: Open Tableau and Connect to Data**
+
+1. Open **Tableau Desktop**.
+2. From the home screen, click **"Microsoft Excel"** if you saved the dataset as an Excel file or **"Text File"** if it's a CSV.
+3. Locate your dataset file (Superstore_Lab1.csv or Exceli.e xlsx).
+In our case load the xlsx file
+4. Click **Open**.
+
+---
+
+### ✅ **Step 2: Load the Data into Tableau**
+
+1. Tableau will automatically load the data into the **Data Source** tab.
+2. Now, drag and drop Orders and Returns table to the right (as shown)
+
+Notice: We have formed a connnection between the tables. This is crucial for the data flow.
+
+3. Click **Sheet 1** at the bottom to start creating your report.
 
 
-### ✅ **Report 1: Sales by State (Map View)**
 
-**Objective**: Visualize geographical sales performance.
+---
+
+### ✅ **Report 1:Profit by States**
+
+1. Drag **Longitude** to the Columns shelf.
+2. Drag **Latitude** to the Rows shelf.
+3. Drop Profit to label and Color options from the Marks card
+4. Drop the State in Detail option on the Marks card.
+
+
+Double tap in sheet 1 and rename it as **Profit by States**
+
+
+---
+
+### ✅ **Report 2: Returns by Reasons**
+
 
 **Steps**:
-1. Create a new worksheet and name it **Sales by State Map**.
-2. Drag `State` to **Rows** (Tableau will recognize it as a geographic field).
-3. Drag `Sales` to **Color** and **Label** on the Marks card.
-4. Change the Marks type to **Map**.
-5. Use the **Color Legend** to highlight states with high and low sales.
-6. Add `Category` as a filter if you want users to view map sales per category.
+1. Go to a new worksheet and name it **Returns by Reasons**.
+2. Drag `Returns(Count)` to **Columns**.
+3. Drag `Return Reason` to **Rows**.
+4. Drop Return Reason to Colors.
 
-### ✅ **Report 6: Top 10 Customers by Profit**
+---
 
-**Objective**: Identify customers contributing the most profit.
+### ✅ **Report 3: Returns by Region**
 
-**Steps**:
-1. Create a new worksheet called **Top 10 Customers**.
-2. Drag `Customer Name` to **Rows**.
-3. Drag `Profit` to **Columns`.
-4. Sort by descending order of Profit.
-5. Drag `Profit` to **Label** to show values.
-6. Use the **Top N Filter**:
-   - Right-click `Customer Name` > Filter.
-   - Go to **Top** tab > Select **By field**: Top 10 by Sum of Profit.
-7. Optional: Add `Customer Segment` to color or filter.
-
-### ✅ **Dashboard Creation: Lab 1 Dashboard**
-
-Let’s combine all visualizations into a dashboard.
 
 **Steps**:
-1. Click the **Dashboard** tab and choose **New Dashboard**.
-2. Drag the following worksheets onto the dashboard:
-   - Sales by Category
-   - Profit by Region
-   - Quantity by Segment
-   - Sales vs. Profit
-   - Sales by State Map
-   - Top 10 Customers
-3. Use **Tiled layout** for neat alignment.
-4. Add **Filters** or **Highlight Actions**:
-   - Example: Click a Category in “Sales by Category” to highlight items in other views.
-5. Add Titles and Captions for clarity.
+1. Create a new worksheet called ** Returns by Region**.
+2. Drag `Region` to **Rows**.
+3. Drag `Returns(Count)` to Color and Label in the Marks card.
+
+
+
+### ✅ **Report 4: Profit by Customer Segment**
+
+
+**Steps**:
+1. Create a new worksheet called **Profit by Customer Segment**.
+2. Drag `Profit` to **Rows**.
+3. Drag `Customer Segment` to **Columns`.
+4. click on Show me on top right corner, choose Treemaps visual.
+
+
+### ✅ **Report 5: Order Quantity by Region**
+
+
+**Steps**:
+1. Create a new worksheet called **Order Quantity by Region**.
+2. Drag `Order Quantity` to **Rows**.
+3. Drag `Region` to **Columns`.
+4. Drag Region on the color option on the Marks Card
+
+
+
+### ✅ Report 6: Profit of States by Sales.
+
+
+**Steps**:
+1. Create a new worksheet called **Profit of States by Sales**
+2. Drag `Profit` to **Rows**.
+3. Drag `State` to **Columns`.
+4. Drag Profit on the color option and Sales to Detail option on the Marks Card.
+
+
+### ✅ **Dashboard: Superstore Profit**
+
+
+**Steps**:
+1. Click on the dashboard option located on the Title bar.
+2. Select new dashboard ( you will land on a empty dashboard)
+3. From the existing sheets list on the left pane, Drag and drop any of the reports of your choice.
+
+
+
+
+### ✅ **Step 7: Save Your Workbook**
+
+1. Click **File** > **Save As**.
+2. Name it: `Lab2.twbx`.
+3. Save it in your project folder.
+
+---
+
+### ✅ **Step 8: Deliverable**
+
+Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
+---
+
+
