--- a/Lab2/2.md
+++ b/Lab2/2.md
@@ -1,4 +1,4 @@
-Alright! Let's begin by designing **Lab 1: ** using the provided Superstore data.
+Alright! Let's begin by designing **Lab 2: ** using the provided Superstore data.
 
 ---
 
@@ -6,9 +6,9 @@ Alright! Let's begin by designing **Lab 1: ** using the provided Superstore data
 
 ### Objective:
 In this lab, you will:
-- Connect Tableau to the Superstore dataset
-- Create an interactive report showing Sales by Category and Region
-- Add basic interactivity (filter, tooltip, and formatting)
+- Connect Tableau to the Superstore dataset (Excel sheet)
+- Create an interactive report showing Profit by Category and Region
+- Add basic interactivity with the formatting.
 
 ---
 
