--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -106,17 +106,17 @@ Now you can see only the two Departments being highlighted along their values (i
 
 ---
 
-## ✅ **Report 6: Patient Visits by Department (Tree Map or Bar)**
+## ✅ Report 6:  Date Parts and Date Values
 
-**Objective**: View total patient visits per department.
 
 **Steps**:
-1. Create a worksheet named **Visits by Department**.
-2. Drag `Department` to **Rows**.
+1. Create a worksheet named **Date of Admits by Patients**.
+2. Drag `Date of Admits` to **Rows**.
 3. Drag `Number of Patient Visits` to **Columns`.
-4. Optional: Change Marks to **Tree Map** by:
-   - Removing Rows and Columns.
-   - Dragging `Department` to **Label**, and `Number of Patient Visits` to **Size** and **Color**.
+4. Click on the dropdown of `Date of Admits` column and choose **Month**.
+5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
+
+Simlarly do the same steps in a new worksheet name it **Date Values**. This time just choose **Month** and **descrete** option from the dropdown for `Date of Admits` column . 
 
 ---
 
