--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -118,6 +118,18 @@ Now you can see only the two Departments being highlighted along their values (i
 
 Simlarly do the same steps in a new worksheet name it **Date Values**. This time just choose **Month** and **descrete** option from the dropdown for `Date of Admits` column . 
 
+## ✅ Report 7:  Number of Patient Visits Over Time
+
+
+**Steps**:
+1. Create a worksheet named **Number of Patient Visits Over Time**.
+2. Drag `Number of Patient Visits` to **Rows**.
+3. Drag `Date of Admits` to **Columns`.
+Choose Month option from the column shelf.
+4. Drag `Date of Admits` onto **Color** and **Label** of the marks card. Choose **Year** option from the dropdown for both the items.
+5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
+
+
 ---
 
 ## ✅ **Dashboard: Hospital Operations Overview**
