--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -129,8 +129,37 @@ Choose Month option from the column shelf.
 4. Drag `Date of Admits` onto **Color** and **Label** of the marks card. Choose **Year** option from the dropdown for both the items.
 5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
 
+## ✅ Report 8:  Patient Admissions by Day (Heat Map)
 
+
+**Steps**:
+1. Create a worksheet named **Patient Admissions by Day (Heat Map)**.
+2. Drag `Date of Admits` to **Rows**.
+Select **Month** from the dropdown
+3. Drag `Date of Admits` to **Columns`.
+Select Day from the dropdown
+4. Drag and drop the `Number of Patient Visits` onto Color on the Marks card
+4. Change the view as **Entire View** from the view dropdowm on the title bar.
+5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
 ---
+
+## ✅ Report 8:  Patient Visits (Gantt Chart)
+
+
+**Steps**:
+1. Create a worksheet named **Patient Visits (Gantt Chart)**.
+2. Drag `Doctor` & `Patient Name to **Rows**.
+3. Drag `Date of Admits` to **Columns`.
+4. Create a calculated field 'Days in Hospital'
+
+**Formula**
+
+`DATEDIFF('day', [Date of Admit], [Date of Discharge])`
+
+
+4. Drag and drop the `Number of Patient Visits` onto Color on the Marks card
+4. Change the view as **Entire View** from the view dropdowm on the title bar.
+5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
 
 ## ✅ **Dashboard: Hospital Operations Overview**
 
