--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -157,9 +157,69 @@ Select Day from the dropdown
 `DATEDIFF('day', [Date of Admit], [Date of Discharge])`
 
 
-4. Drag and drop the `Number of Patient Visits` onto Color on the Marks card
-4. Change the view as **Entire View** from the view dropdowm on the title bar.
-5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
+4. Drag and drop the `Days in Hospital` onto **Size** on the Marks card
+4. Drop `Department` in filters and choose ER
+6. Drop `Date of Adimit` in the filters and choose **2019 year**
+
+Make sure you keep `Date of Adimit` the as exact date. You can find this by clicking the dropdown of the column.
+
+## ✅ Report 9:  Patient Risk
+
+**Steps**:
+1. Create a worksheet named **Patient Risk**.
+2. From Hospital Visits.csv, drag:
+
+- `Department Type` → Rows
+
+- `Number of Patient Visits` → Columns
+
+3. Drag `Patient Risk Profile` → Color (under Marks card)
+4. Sort the axis by desending and change the view to **Entire View**
+
+## ✅ Report 10:  Patient Risk (Percent per Department Type)
+
+**Steps**:
+1. Create a worksheet named **Patient Risk (Percent per Department Type)**.
+2. drag:
+
+- `Department Type` → Rows
+
+- `Number of Patient Visits` → Columns
+3. Create a table calculation , you can find this in the drop-dowm. Follow the below  configuration
+
+3. Drag `Patient Risk Profile` → Color (under Marks card)
+4. Drag `Number of Patient Visits` → Label (under Marks card)
+4. Create a table calculation for **Number of Patient Visits** , you can find this in the drop-dowm. Follow the below  configuration
+
+Note: You can adjust the decimal points by right clicking on the columns and removing the decimal points.
+
+## ✅ Report 11:  Patient Risk (side-by side views)
+
+Follow the same steps as Report 10.
+
+Drag **Number of Patient Visits** again to columns and adjust the percentages/values by using the formatting option.
+
+## ✅ Report 12:  Days in the Hospital
+
+Drag and drop. 
+- Department to Color
+- Days in Hospital to Size
+- Doctor and Patient Name to Detail
+
+## ✅ Report 13:  Days in the Hospital ( by branch)
+
+1. Drag and drop. 
+- Department to Color
+- Days in Hospital to Size
+- Doctor and Patient Name to Detail
+
+2. Drop Hospital Branch to Rows
+
+## ✅ Report 14:  Days in the Hospital ( by branch)
+
+1. Drag and drop. 
+ Date o
+2. Drop Hospital Branch to Rows
 
 ## ✅ **Dashboard: Hospital Operations Overview**
 
