--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -215,11 +215,29 @@ Drag and drop.
 
 2. Drop Hospital Branch to Rows
 
-## ✅ Report 14:  Days in the Hospital ( by branch)
+## ✅ Report 14:  Patient Visits over Time (area chart)
 
 1. Drag and drop. 
- Date o
-2. Drop Hospital Branch to Rows
+ `Date of Admit` in **Column** (Change from Year to Month from the dropdown)
+ `Number of Patients` in **Rows**
+2. Drop Hospital Branch to Color
+4. Select **Area chart** from **show me** visuals
+
+## ✅ Report 15:  Patient Visits over Time (area chart - percent of total)
+
+You can just duplicate the above report or follow the same steps.
+
+1. Add a table calculation for `Number of patient Visits`. Use the below configuration.
+
+## ✅ Report 16:  Revenue by Branch (Pie Chart)
+
+1. Drag and drop. 
+- Hospital Branch to Color and Label
+- Revenue to Label twice
+For one of the Revenue, add a table calculation for it. Use the below configuration.
+2. Choose **Pie chart** from the visuals
+- Doctor and Patient Name to Detail
+
 
 ## ✅ **Dashboard: Hospital Operations Overview**
 
