--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -239,21 +239,36 @@ For one of the Revenue, add a table calculation for it. Use the below configurat
 - Doctor and Patient Name to Detail
 
 
-## ✅ **Dashboard: Hospital Operations Overview**
+## ✅ Report 17:  Average Length of Stay by Doctor
 
-**Steps**:
-1. Click the **Dashboard** tab and choose **New Dashboard**.
-2. Drag the following worksheets onto the dashboard:
-   - Revenue by Department
-   - Department Revenue vs. Goal
-   - Revenue by Doctor
-   - Revenue by Risk Profile
-   - Time to Service Distribution
-   - Visits by Department
-3. Use **Tiled layout** for clean structure.
-4. Add **Filter actions** (e.g., filter by Department or Risk Profile).
-5. Add titles, captions, and legends for clarity.
+1. Drag and drop. 
+- Days in Hospital to Columns ( Change the aggregate to Average)
+- Department type to Rows
+2. On the **Marks** dropdown select **Circle**
+3. Drop **Department** Type to **Color** 
+4. Drop **Doctor** to **Detail**
+5. Add a reference line and follow the below configuration. 
 
+## ✅ Report 18:  Average Length of Stay by Doctor (jittering)
+
+Follow the same steps as above report.
+- Click on arrow beside Rows and select **New Calculation**. Name it **Index** and add a table calculation. Follow the below configuration.
+
+
+## ✅ Report 19:  Average Length of Stay by Doctor (Box Plot)
+
+The Same configuration as above.
+Remove the Index from the Rows.
+Select Box and Whiskers plot from the visual list. 
+It changes the rows and columns. Just bring back the original placement. (i.e - Days in Hospital to Columns and Department type to Rows)
+
+## ✅ Report 20:  Minutes to Service (histogram)
+
+1. Right click on Minutes to Service -> Create-> bins
+Adjust the bin size to 2
+2. Drop `Minutes to Service(bins)` to Columns
+3. Drop `Patient Risk Profile` and `Minutes to Service` on **Rows**
+4. Set `Minutes to Service` as countinuous 
 ---
 
 Would you like help preparing the actual Tableau workbook structure or formulas for filters/calculations?
