--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -269,6 +269,20 @@ Adjust the bin size to 2
 2. Drop `Minutes to Service(bins)` to Columns
 3. Drop `Patient Risk Profile` and `Minutes to Service` on **Rows**
 4. Set `Minutes to Service` as countinuous 
----
 
+## ✅ Report 21:  Revenue and Patient Visits by Department
+
+
+1. Drop `Revenue` to Columns
+2. Drop `Number of Patients` on **Rows**
+4. Set `Department` to Label
+
+----------
+
+## ✅ Report 22:  Revenue and Patient Visits by Department
+
+
+1. Drop `Revenue` to Columns
+2. Drop `Number of Patients` on **Rows**
+4. Set `Department` to Label
 Would you like help preparing the actual Tableau workbook structure or formulas for filters/calculations?
