--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -285,4 +285,13 @@ Adjust the bin size to 2
 1. Drop `Revenue` to Columns
 2. Drop `Number of Patients` on **Rows**
 4. Set `Department` to Label
-Would you like help preparing the actual Tableau workbook structure or formulas for filters/calculations?
+
+---
+## ✅ Report 23:  Number of Patient Visits (Combination Chart)
+
+
+1. Drop `Date of Admit` to **Columns** (Choose Month)
+2. Drop `Number of Patients` on **Rows** twice
+3. On the Marks Card, To one of the Sum(Number of Patients) change the type to Bar
+And on another Sum(Number of Patients)-> Drop `Hospital Branch` on `Color`
+
