--- a/lab4/4.md
+++ b/lab4/4.md
@@ -77,8 +77,59 @@ Then Drag the `Floor` to **Columns**
 - Building
 - Room
 - Full Name 
-- Start Date
-- End Date
+- Start 
+- End 
 
 6. Drop `Measure Names` to **Columns**
 7. Drop `Measure Names` to **Filters** and choose `Discount`, `Discount %` & `Rent`
+8. Drop `Measure values` to **Labels**
+----
+
+### ✅ **Report 4: Discount % per Room Report**
+
+Just duplicate Report 3 and remove start and end dates from Rows.
+
+-----
+
+### ✅ **Report 5: Overal Discount % Report**
+
+Just duplicate Report 4 and remove all the fields from Rows.To understand the overall discount percentage.
+
+--------
+### ✅ **Report 6: Overal Discount % (Aggregate v. Row Level) Report**
+
+Just duplicate Report 5. 
+
+1. Change the view to `Fit Width`
+2. Create a calculated field under **Discount%**. Name the field as **Discount % (row level)** and enter the below formula.
+
+**Formula**
+
+`[Discount] / [Rent]`
+3. Now select Discount % (row level) in the Filter that is already existing(i.e Measure Names)
+
+
+-----
+
+### ✅ **Report 7: Rental Calendar Report**
+
+
+
+1. Drag and drop the following to **Rows**:
+- Building
+- Room
+2. Drop `Start Date` in **Columns**
+3. Create a calculated field under **Discount % (row level)**. Name the field as **Nights Rented** and enter the below formula.
+
+**Formula**
+
+`DATEDIFF('day', [Start Date], [End Date])`
+
+ Drop this field on **Size**
+ 
+ 4. Drop `Full Name` on **Label**
+ 5. Click on **Label** and change the alignment to **Middle Center**. And **Show mark Label** is ticked
+ 
+ -----
+ ### ✅ **Report 8: Free Night Analysis Report**
+
