--- a/lab4/4.md
+++ b/lab4/4.md
@@ -133,3 +133,46 @@ Just duplicate Report 5.
  -----
  ### ✅ **Report 8: Free Night Analysis Report**
 
+**Just duplicate report 7**. 
+
+1. Right click on a empty space of columns (Left pane). Create Parameter and follow the below configuration.
+
+**Note:-**
+- If it automatically picks a random date we can still edit it later.
+
+- Once you have click on ok.
+
+- You will see the parameter created. Now click on the arrow of **Free Night** and click on **show parameter**
+
+- Now you can set the date as **12-12-2020**
+
+2. Create a calculated field under **Tables**. Name the field as **Gets Free Night** and enter the below formula.
+
+**Formula**
+
+`[Free Night] >= [Start Date]
+AND
+[Free Night] <= [End Date]`
+
+Pull this field into **Color**.
+
+3. Right click on the bottom axis and create a reference line. Follow the below configuration.
+
+
+---------
+### ✅ **Report 9: Revenue per Guest Report**
+
+1. Create a calculated field under **Rent**. Name the field as **Revenue** and enter the below formula.
+
+**Formula**
+
+`[Rent] - [Discount] + ([Tax per Night] * [Nights Rented])`
+
+Drop this is Columns
+
+2. Drop Full Name in Rows
+3. Drop Revenue on Color.
+
+Now Double click on Revenue and enter the below formula.
+`SUM([Revenue]) < 1500`
+------------
