--- a/lab5/5.md
+++ b/lab5/5.md
@@ -30,52 +30,45 @@ Duplicate the report 1.
 ### ✅ **Report 3: FIXED Example 1: Member Ever at Risk? Report**
 
 
-1. Create a calculated field under **Tables**. Name the field as **Member Ever at Risk** and enter the below formula.
+1. Create a calculated field under **Tables**. Name the field as **Member Ever at Risk?** and enter the below formula.
 
 **Formula**
 
 `{FIXED [Member ID] : MIN([Credit Score])} < 550`
 
-2. Create a calculated field under **Tables**. Name the field as **Start Date** and enter the below formula.
+2. Drag and drop the following in rows
+- Member ID
+- Member Name
+- Loan Type
+- Date ( Make sure to keep it exact date and discrete)
+- Member Ever at Risk
 
-**Formula**
+3. Drop `Measure Names` in Column and then drop it in the **filters** and choose `Balance` and `Credit Score` from the list.
+4, Drop `Member ID` in the **Filters** ( From the list choose the numbers (158,479,576))
+5. Drop `Measure Values` in **Label**
 
-`DATE([Start] + ", 2020")`
 
-3. Create a calculated field under **Tables**. Name the field as **Full Name** and enter the below formula.
-
-**Formula**
-
-`[First] + " " + [Last]`
-
-4. Create a calculated field under **Tables**. Name the field as **Discount %** and enter the below formula.
-
-**Formula**
-
-`SUM([Discount]) / SUM([Rent])`
-
-5. Drag and drop the following to **Rows**:
-- Building
-- Room
-- Full Name 
-- Start 
-- End 
-
-6. Drop `Measure Names` to **Columns**
-7. Drop `Measure Names` to **Filters** and choose `Discount`, `Discount %` & `Rent`
-8. Drop `Measure values` to **Labels**
 ----
 
-### ✅ **Report 4: Discount % per Room Report**
+### ✅ **Report 4: FIXED Example 1: How Many Members Ever at Risk by Portfolio Report**
 
-Just duplicate Report 3 and remove start and end dates from Rows.
+1. Drop Member ID to Columns ( Choose the aggregate as CountDistinct from the list)
+2. Drop Portfolio in Rows
+3. Drop `Member Ever at Risk?` to Color card
 
 -----
 
-### ✅ **Report 5: Overal Discount % Report**
+### ✅ **Report 5: FIXED Example 2: Member & Loan History Report**
 
-Just duplicate Report 4 and remove all the fields from Rows.To understand the overall discount percentage.
+1. Drag and drop the following in rows
+- Member ID
+- Member Name
+- Loan Number
+- Loan Type
+- Date ( Make sure to keep it exact date and discrete)
 
+2. Drop Member ID in Filters and choose the numbers(14827, 16024, 16070)
+3. Drop Balance in Label card
 --------
 ### ✅ **Report 6: Overal Discount % (Aggregate v. Row Level) Report**
 
