--- a/lab5/5.md
+++ b/lab5/5.md
@@ -70,40 +70,39 @@ Duplicate the report 1.
 2. Drop Member ID in Filters and choose the numbers(14827, 16024, 16070)
 3. Drop Balance in Label card
 --------
-### ✅ **Report 6: Overal Discount % (Aggregate v. Row Level) Report**
+### ✅ **Report 6: FIXED Example 2: Most Recent Balance Report**
 
 Just duplicate Report 5. 
 
-1. Change the view to `Fit Width`
-2. Create a calculated field under **Discount%**. Name the field as **Discount % (row level)** and enter the below formula.
+
+1. Create a calculated field under **Tables**. Name the field as **Latest Date per Member/Loan** and enter the below formula.
 
 **Formula**
 
-`[Discount] / [Rent]`
-3. Now select Discount % (row level) in the Filter that is already existing(i.e Measure Names)
+`{FIXED [Member ID],[Loan Number] : MAX([Date])} = [Date]`
+
+Drop this field in rows along other fields.
+
 
 
 -----
 
-### ✅ **Report 7: Rental Calendar Report**
+### ✅ **Report 7: INCLUDE Example: Average Loans per Member Report**
 
 
 
-1. Drag and drop the following to **Rows**:
-- Building
-- Room
-2. Drop `Start Date` in **Columns**
-3. Create a calculated field under **Discount % (row level)**. Name the field as **Nights Rented** and enter the below formula.
+1. Drag and drop the `Latitude` to **Rows**:
+2. Drop `Longititude` in **Columns**
+3. Create a calculated field under **Measures**. Name the field as **Number of Loans per Member** and enter the below formula.
 
 **Formula**
 
-`DATEDIFF('day', [Start Date], [End Date])`
+`{INCLUDE [Member ID] : COUNTD([Loan Number])}`
 
- Drop this field on **Size**
- 
- 4. Drop `Full Name` on **Label**
- 5. Click on **Label** and change the alignment to **Middle Center**. And **Show mark Label** is ticked
- 
+Drop this field on **Color**
+
+4. Drop `State` on **Detail**
+
  -----
  ### ✅ **Report 8: Free Night Analysis Report**
 
